<resources>
    <string name="app_name">Sense</string>
    <string name="app_version_fmt">%1$s %2$s</string>
    <string name="action_settings">Settings</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_name">Name</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_gender">Gender</string>
    <string name="label_height">Height</string>
    <string name="label_weight">Weight</string>
    <string name="label_birthday">Birthday</string>
    <string name="action_log_in">Log in</string>
    <string name="action_set_up_sense">Set up Sense</string>
    <string name="action_set_up_sense_with_voice">Set up Sense with voice</string>
    <string name="device_sense">Sense</string>
    <string name="device_pill">Sleep Pill</string>
    <string name="device_unknown">Other</string>
    <string name="device_network_unknown">Connected</string>
    <string name="device_state_normal">Good</string>
    <string name="device_state_low_battery">Low</string>
    <string name="device_state_unknown">Unknown</string>
    <string name="device_ota_state_not_required">Not required</string>
    <string name="device_ota_state_required">Required</string>
    <string name="device_ota_state_response_sent">Response sent</string>
    <string name="device_ota_state_in_progress">In progress</string>
    <string name="device_ota_state_complete">Complete</string>
    <string name="device_ota_state_error">Error</string>
    <string name="sleep_score">Sleep Score</string>
    <string name="condition_temperature">Temperature</string>
    <string name="condition_humidity">Humidity</string>
    <string name="condition_airquality">Air Quality</string>
    <string name="missing_data_placeholder">--</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="gender_custom">Custom</string>
    <string name="label_new_question">New Question</string>
    <string name="action_skip_question">Skip This Question</string>
    <string name="dialog_title_log_out">Sign Out</string>
    <string name="dialog_message_log_out">Are you sure you want to sign out?</string>
    <string name="action_log_out">Sign Out</string>
    <string name="action_alarm">Alarm</string>
    <string name="action_select">Select</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="title_register">Introduce yourself</string>
    <string name="title_sign_in">Welcome back</string>
    <string name="label_account">My Account</string>
    <string name="label_units_and_time">Units and Time</string>
    <string name="label_devices">Sense and Sleep Pill</string>
    <string name="label_tell_a_friend">Tell a friend about Sense</string>
    <string name="tell_a_friend_subject">Try Sense</string>
    <string name="tell_a_friend_body">Sense tracks your sleep, monitors the environment of your bedroom, and helps you wake up feeling great: https://hello.is</string>
    <string name="title_time_frame_24_hrs">Last Day</string>
    <string name="title_time_frame_week">Past Week</string>
    <string name="title_info">Info</string>
    <string name="title_demographics">Demographics</string>
    <string name="action_ok">OK</string>
    <string name="action_okay">Okay</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_deny">Deny</string>
    <string name="action_continue">Continue</string>
    <string name="action_turn_on_ble">Turn on Bluetooth</string>
    <string name="title_upgrade_sense_voice">Sense with Voice</string>
    <string name="info_upgrade_sense_voice">This will walk you through migrating your account to a new Sense with Voice. You’ll need a Sense with Voice to continue.</string>
    <string name="action_upgrade_sense_voice_help">Buy Sense with Voice</string>
    <string name="title_upgrade_ready_sense_voice">Sense with Voice is ready</string>
    <string name="info_upgrade_ready_sense_voice">Your new Sense with Voice is set up and any paired, original Sleep Pills have been moved over. Next, you’ll pair your new Sleep Pill.</string>
    <string name="title_setup_sense">Setting up Sense</string>
    <string name="info_setup_sense">Make sure Sense is plugged into a wall outlet next to your bed.</string>
    <string name="title_pair_sense">Pairing with Sense</string>
    <string name="info_pair_sense">Sense should be plugged in, nearby, and glowing either blue or purple.</string>
    <string name="title_pair_new_sense">Pairing your new Sense</string>
    <string name="info_pair_new_sense">Sense should be plugged in, nearby, and glowing blue or purple.</string>
    <string name="title_pairing">Pairing</string>
    <string name="title_connecting_network">Connecting to WiFi</string>
    <string name="title_connecting_network_wlan_connected">@string/title_connecting_network</string>
    <string name="title_connecting_network_ip_retrieved">@string/title_connecting_network</string>
    <string name="title_connecting_network_dns_resolved">@string/title_connecting_network</string>
    <string name="title_connecting_network_socket_connected">@string/title_connecting_network</string>
    <string name="title_connecting_network_request_sent">@string/title_connecting_network</string>
    <string name="title_connecting_network_connect_failed">Failed to Connect, Retrying</string>
    <string name="wifi_network_secured">Secured Network</string>
    <string name="wifi_network_was_scanned">Scanned</string>
    <string name="title_choose_wifi_network">Connecting Sense to Wi-Fi</string>
    <string name="info_choose_wifi_network">Please select your Wi-Fi network from the list below:</string>
    <string name="title_sign_into_wifi_selection">Enter password for</string>
    <string name="title_sign_into_wifi_selection_open">Connect to</string>
    <string name="title_sign_into_wifi_other">Enter WiFi credentials</string>
    <string name="wifi_other_network">Other…</string>
    <string name="label_network_name">Network Name</string>
    <string name="action_skip">Skip</string>
    <string name="action_try_again_later">Try again later</string>
    <string name="action_play_video">Play</string>
    <string name="action_get_started">Get Started</string>
    <string name="action_buy_sense">Order a Sense</string>
    <string name="action_pair_your_sense">Pair your Sense</string>
    <string name="welcome">Welcome</string>
    <string name="title_register_birthday">What is your birthday?</string>
    <string name="action_next">Next</string>
    <string name="title_register_gender">Confirm your gender</string>
    <string name="title_register_weight">How much do you weigh?</string>
    <string name="title_register_height">How tall are you?</string>
    <string name="title_intro_sleep_pill">Clip Sleep Pill to your Pillow</string>
    <string name="info_intro_sleep_pill">Clip Sleep Pill to your pillowcase by pulling the edge of the pillowcase taut.  For best results, place your Sleep Pill on the side of your pillowcase closest to the edge of the bed.</string>
    <string name="title_pair_pill">Pairing your Sleep Pill</string>
    <string name="info_pair_pill">To pair your Sleep Pill, shake it for three seconds and then stop.\n\nYou may need to shake it quickly to register. Be sure to stop after three seconds.</string>
    <string name="title_sense_colors_intro">Sense Colors</string>
    <string name="info_sense_colors_intro">Sense glows to tell you about the conditions in your bedroom – including temperature, humidity, light, and noise. Sense has three different colors.</string>
    <string name="title_sense_colors_good">All good.</string>
    <string name="info_sense_colors_good">Sense glows green when the conditions in your room are just right for a good night‘s sleep.</string>
    <string name="title_sense_colors_warning">Something‘s not right.</string>
    <string name="info_sense_colors_warning">Sense glows yellow when something in your bedroom is not quite right. Check the Sense app for details.</string>
    <string name="title_sense_colors_bad">We‘ve got a problem.</string>
    <string name="info_sense_colors_bad">Sense glows red when the conditions in your bedroom would prevent restful sleep. Check the Sense app for details.</string>
    <string name="title_sense_colors_end">Just wave.</string>
    <string name="info_sense_colors_end">Just wave your hand over Sense and instantly you‘ll know about the conditions in your bedroom. Go ahead, give it a try now.</string>
    <string name="title_sense_reset_original">Reset your original Sense</string>
    <string name="info_sense_reset_original">Reset your original Sense to use with another account or give away. Plug your original Sense into a power outlet and make sure it’s nearby before resetting.</string>
    <string name="action_reset_sense_original">Factory Reset Sense</string>
    <string name="dialog_sense_reset_original">Restoring to Factory Settings</string>
    <string name="onboarding_complete_title">You’re all set.</string>
    <string name="onboarding_voice_complete_title">You’re all set</string>
    <string name="onboarding_voice_complete_message">Sense is now ready to use. All you need to do now is sleep.</string>
    <string name="checking_condition_temperature">Checking temperature</string>
    <string name="action_insights">Insights</string>
    <string name="action_delete">Delete</string>
    <string name="action_pair_sense">Pair Sense</string>
    <string name="onboarding_register_info_explanation">This is used to provide you with more personalized recommendations about your sleep.</string>
    <string name="onboarding_title_smart_alarm">Set a Smart Alarm</string>
    <string name="onboarding_info_smart_alarm">Sense\'s Smart Alarm knows where you are in your sleep cycle and will wake you up at the right time for you. To dismiss the alarm, just wave your hand over Sense.</string>
    <string name="action_do_later">I\'ll do this later</string>
    <string name="action_set_smart_alarm_now">Set a Smart Alarm now</string>
    <string name="title_trends">Trends</string>
    <string name="title_current_conditions">Current Conditions</string>
    <string name="info_no_sense_connected">You don\'t currently have a Sense connected to your account.</string>
    <string name="info_set_up_sense_with_voice">Your account is currently linked to an original Sense. If you have a new Sense with Voice, you can set it up here.\n\n<a href="#sense-with-voice-info">Learn more about the new Sense</a>\n</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="action_skip_short">Skip</string>
    <string name="number_0">0</string>
    <string name="label_enhanced_audio">Enhanced Audio</string>
    <string name="info_enhanced_audio">Enhanced audio allows Sense to pick up snoring, sleep talking, and other noise disturbances.</string>
    <string name="onboarding_intro_heading">Meet Sense</string>
    <string name="onboarding_intro_subheading">Wake up feeling great, improve your sleep, and\nlearn how the environment of your bedroom\naffects your rest.</string>
    <string name="action_watch_video">Watch Video</string>
    <string name="title_sense_voice">Sense with Voice</string>
    <string name="notification_settings_enabled_title">Notifications not enabled</string>
    <string name="notification_settings_enabled_body">Check your device settings to make sure notifications are enabled.</string>
    <string name="notification_settings_enabled_link">Enable notifications</string>
</resources>