<?xml version="1.0" encoding="utf-8"?>

<!-- Must have android:clickable="true" to work with
     FragmentNavigationFragment#overlayFragmentAllowingStateLoss(...) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_card"
              android:clickable="true"
              android:orientation="vertical"
              android:padding="@dimen/x3">

    <TextView
        style="@style/Title2.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register_birthday"/>

    <TextView
        style="@style/Body1.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x1"
        android:text="@string/onboarding_register_info_explanation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/fragment_onboarding_birthday_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TableLayout
        android:id="@+id/fragment_onboarding_register_birthday_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_marginBottom="@dimen/x2">

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/number_1"/>

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/number_2"/>

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="3"
                android:text="@string/number_3"/>

        </TableRow>

        <TableRow
            android:layout_marginBottom="@dimen/x2">

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="4"
                android:text="@string/number_4"/>

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="5"
                android:text="@string/number_5"/>

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="6"
                android:text="@string/number_6"/>

        </TableRow>

        <TableRow
            android:layout_marginBottom="@dimen/x2">

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="7"
                android:text="@string/number_7"/>

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="8"
                android:text="@string/number_8"/>

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="9"
                android:text="@string/number_9"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/fragment_onboarding_register_birthday_skip"
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="-1"
                android:text="@string/action_skip_short"/>

            <Button
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="0"
                android:text="@string/number_0"/>

            <Button
                android:id="@+id/fragment_onboarding_register_birthday_delete"
                style="@style/Button.Flat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="-1"
                android:text="@string/action_delete"/>

        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>