<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/onboarding_intro_sense"
        android:contentDescription="@string/device_sense" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x1"
        android:gravity="center"
        style="@style/Display1.Primary"
        android:text="@string/onboarding_intro_heading" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x1"
        android:gravity="center"
        style="@style/Body1.Secondary"
        android:text="@string/onboarding_intro_subheading" />

    <Button
        android:id="@+id/item_onboarding_intro_first_watch_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x1"
        android:drawableStart="@drawable/onboarding_intro_play"
        android:drawablePadding="@dimen/x1"
        android:text="@string/action_watch_video"
        style="@style/Button.Flat" />

</LinearLayout>