<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/gap_xlarge"
    android:paddingLeft="@dimen/gap_xlarge"
    android:paddingRight="@dimen/gap_xlarge"
    android:paddingBottom="@dimen/gap_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTheme.Text.Heading"
        android:text="@string/onboarding_title_smart_alarm"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_small"
        android:layout_marginBottom="@dimen/gap_small"
        android:src="@drawable/onboarding_smart_alarm"
        android:contentDescription="@string/onboarding_title_smart_alarm"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAppearance="@style/AppTheme.Text.Subheading"
        android:text="@string/onboarding_info_smart_alarm"/>

    <Button
        android:id="@+id/fragment_onboarding_smart_alarm_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_large"
        android:text="@string/action_set_smart_alarm_now"
        style="@style/AppTheme.Button.Rounded" />

    <Button
        android:id="@+id/fragment_onboarding_smart_alarm_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_small"
        android:text="@string/action_do_later"
        style="@style/AppTheme.Button.Borderless.Onboarding" />

</LinearLayout>