<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/x2"
    android:paddingBottom="@dimen/x2"
    android:paddingLeft="@dimen/x3"
    android:paddingRight="@dimen/x3"
    android:gravity="start|center_vertical">

    <ImageView
        android:id="@+id/item_wifi_network_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x2"
        android:src="@drawable/icon_wifi_good"
        android:contentDescription="@string/wifi_network_was_scanned"/>

    <TextView
        android:id="@+id/item_wifi_network_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/Body1.Primary"
        android:text="@string/app_name"
        android:maxLines="1"
        android:ellipsize="end" />

    <ImageView
        android:id="@+id/item_wifi_network_locked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x2"
        android:src="@drawable/wifi_network_lock"
        android:contentDescription="@string/wifi_network_secured"/>

</LinearLayout>