<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x2"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.Text.Body.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x2"
            android:text="@string/notification_settings_enabled_title"/>

        <TextView
            style="@style/AppTheme.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x2"
            android:text="@string/notification_settings_enabled_body"/>

        <TextView
            style="@style/AppTheme.Text.Body.Link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x2"
            android:text="@string/notification_settings_enabled_link"/>

    </LinearLayout>

    <View style="@style/Divider.Horizontal"/>


</LinearLayout>