<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_collapsible_action_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x3"
        android:drawableEnd="@drawable/disclosure_chevron"
        android:drawablePadding="@dimen/x1"
        android:gravity="start|center_vertical"
        android:textColor="@color/light_accent"
        android:textAppearance="@style/AppTheme.Text.Body"
        android:text="@string/title_sense_voice"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/item_collapsible_action_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/x3"
        android:paddingEnd="@dimen/x3"
        android:paddingBottom="@dimen/x3"
        tools:text="@string/info_set_up_sense_with_voice"/>

    <Button
        android:id="@+id/item_collapsible_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x3"
        android:layout_marginEnd="@dimen/x3"
        android:text="@string/action_set_up_sense_with_voice"
        style="@style/AppTheme.Button.Rounded"
        android:visibility="gone"
        tools:visibility="visible"
        />

</LinearLayout>