<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x3"
        android:paddingStart="@dimen/x3"
        android:paddingEnd="@dimen/x3"
        android:layout_marginBottom="@dimen/x1"
        android:gravity="start|center_vertical"
        android:textColor="@color/light_accent"
        android:textAppearance="@style/AppTheme.Text.Body"
        android:text="@string/app_name"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/item_device_placeholder_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x3"
        android:layout_marginRight="@dimen/x3"
        android:layout_marginBottom="@dimen/x2"
        android:textAppearance="@style/AppTheme.Text.Body.MidSized.New"
        android:text="@string/info_no_sense_connected"
        android:lineSpacingMultiplier="@dimen/line_multiple_body"/>

    <Button
        android:id="@+id/item_device_placeholder_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x3"
        android:layout_marginRight="@dimen/x3"
        android:layout_marginBottom="@dimen/x3"
        android:text="@string/action_pair_sense"
        style="@style/AppTheme.Button.Rounded"/>

</LinearLayout>